--- a/Baku/Icons.resx
+++ b/Baku/Icons.resx
@@ -136,6 +136,9 @@
   <data name="BoidsAvoidance" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\BoidsAvoidance.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="BoidsBoundary" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\BoidsBoundary.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="BoidsCohesion" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\BoidsCohesion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
